# oeffimonitor-cli

./: Cargo.toml  bla  example-output  example_return.json  stoerung.json
src/: main.rs
