[package]
name = "oeffimonitor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config="0.13.1"
reqwest={ version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json="1.0"
iso8601="0.6.1"
thiserror = "1.0"
prettytable-rs="0.10.0"